# AI-ProofConcept

./: README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
